force-app/main/default/objects/EquipmentRequest__c/EquipmentRequest__c.object-meta.xml
<CustomObject>
    <label>Equipment Request</label>
    <nameField>
        <displayFormat>EQR-{000}</displayFormat>
        <label>Request #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Equipment Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>