force-app/main/default/objects/EquipmentRequest__c/fields/Additional_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Additional_Equipment__c</fullName>
    <label>Additional Equipment</label>
    <type>TextArea</type>
</CustomField>