force-app/main/default/objects/EquipmentRequest__c/fields/Fulfillment_Date__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Date__c</fullName>
    <label>Fulfillment Date</label>
    <type>Date</type>
</CustomField>