force-app/main/default/objects/EquipmentRequest__c/fields/Laptop_Type__c.field-meta.xml
<CustomField>
    <fullName>Laptop_Type__c</fullName>
    <label>Laptop Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MacBook Air</fullName>
            </value>
            <value>
                <fullName>MacBook Pro</fullName>
            </value>
            <value>
                <fullName>Windows Laptop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>