force-app/main/default/objects/EquipmentRequest__c/fields/Monitor_Count__c.field-meta.xml
<CustomField>
    <fullName>Monitor_Count__c</fullName>
    <label>Monitor Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>